fixed social links on mobile portrait

--- a/responsive.css
+++ b/responsive.css
@@ -279,6 +279,8 @@
       grid-template-areas:
         "social copyright";
       margin-top: 0;
+      padding-top: 0;
+      padding-bottom: 0;
     }
     .social-media {
       margin-left: 5vw;
